--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "ura-analytics-backend",
-  "version": "1.0.0",
-  "description": "Backend API for URA Property Analytics Platform",
-  "main": "src/index.js",
+  "name": "ura-backend",
+  "version": "3.0.0",
   "type": "module",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "node --watch src/index.js"
+    "start": "node server.js",
+    "dev": "node --watch server.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
